--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,18 +1,12 @@
 <html>
 
 <head>
-    <title>RSocket Demo</title>
+    <title>Comment</title>
 </head>
 
 <body>
-<!--<h2>Filtering by Author</h2>-->
-<!--<select id="author-filter">-->
-<!--    <option value="linustorvalds">Linus Torvalds</option>-->
-<!--    <option value="martinfowler">Martin Fowler</option>-->
-<!--    <option value="robertmartin">Robert Martin</option>-->
-<!--</select>-->
 
-<h2>Messages</h2>
+<h2>Comments</h2>
 <p>
 <ul id="messages">
 
