--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,11 +2,14 @@
 
 <head>
     <title>Comment</title>
+    <link rel="stylesheet" href="main.css">
+    <!--    <link rel="stylesheet" href="chat.css">-->
 </head>
 
 <body>
 
-<h2>Comments</h2>
+<div id="comments"></div>
+
 <p>
 <ul id="messages">
 
