--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Comment</title>
     <link rel="stylesheet" href="main.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!--    <link rel="stylesheet" href="chat.css">-->
 </head>
 
@@ -10,11 +13,32 @@
 
 <div id="comments"></div>
 
-<p>
-<ul id="messages">
+<!--<p>-->
+<!--<ul id="messages">-->
 
-</ul>
-</p>
+<!--</ul>-->
+<!--</p>-->
+
+<div class="container-fluid">
+    <div class="row">
+
+        <div class="col-md-9">
+            <h4 style="margin-top:20px">Realtime Chat<i style="float:right" class="fa fa-cog"></i></h4>
+            <hr>
+
+            <form>
+                <ul id="messages"></ul>
+
+                <div class="form-row">
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="Message" id="message">
+                    </div>
+                    <button type="button" class="btn btn-primary" id="submit">Send</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 <script src="app.js"></script>
 </body>
