--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,7 +31,7 @@
 
                 <div class="form-row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Message" id="message">
+                        <input type="text" class="form-control" placeholder="Message" id="chat-message">
                     </div>
                     <button type="button" class="btn btn-primary" id="submit">Send</button>
                 </div>
